--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,4 +1,5 @@
-/* color palette from <https://github.com/vuejs/theme> */
+
+
 :root {
   --vt-c-white: #ffffff;
   --vt-c-white-soft: #f8f8f8;
@@ -19,9 +20,11 @@
   --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
   --vt-c-text-dark-1: var(--vt-c-white);
   --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
+
+  --color-gradient-start: #0f172a;
+  --color-gradient-end: #334155;
 }
 
-/* semantic color variables for this project */
 :root {
   --color-background: var(--vt-c-white);
   --color-background-soft: var(--vt-c-white-soft);
@@ -61,7 +64,7 @@
 body {
   min-height: 100vh;
   color: var(--color-text);
-  background: var(--color-background);
+  background: linear-gradient(to right, #d1d5db, #6b7280, #374151);;
   transition:
     color 0.5s,
     background-color 0.5s;
