--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,8 @@
 @import './base.css';
 @import "tailwindcss";
+@import "tailwindcss/utilities";
+@plugin "daisyui";
+
 
 #app {
   max-width: 1280px;
@@ -33,4 +36,4 @@ a,
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
-}
+} 
