--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,8 +2,7 @@
 @import "tailwindcss";
 @import "tailwindcss/utilities";
 @plugin "daisyui";
-
-
+/* 
 #app {
   max-width: 1280px;
   margin: 0 auto;
@@ -36,4 +35,4 @@ a,
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
-} 
+} */
