--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,8 +5,10 @@
 /* Custom styles */
 .bg-custom-gradient {
   @apply bg-gradient-to-r from-[#0f172a] to-[#334155];
+  /* @apply bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 */
 }
 
 .glass-morphism {
-  @apply bg-gray-100/10 bg-clip-padding backdrop-filter backdrop-blur-lg;
+  /* @apply bg-gray-100/10 bg-clip-padding backdrop-filter backdrop-blur-lg; */
+  @apply bg-gray-400/10 rounded-md bg-clip-padding backdrop-filter backdrop-blur-md border border-gray-100;
 }
